# towerpy

./: CITATION.cff  CONTRIBUTORS.txt  LICENSE  MANIFEST.in  README.md  meta.yaml  pyproject.toml  setup.py
docs/jupyter_execute/dvcmaps/: plot_allcmaps.ipynb  plot_cmaps_cvd.ipynb  plot_cmaps_grey.ipynb
docs/jupyter_execute/notebooks/: computeRD-QVPs.ipynb  radchain_ukmo9.ipynb  radchain_ukmo90.ipynb  radchain_ukmoC.ipynb  recipe for the MFS computation.ipynb
docs/source/: conf.py
docs/source/dvcmaps/: plot_allcmaps.ipynb  plot_cmaps_cvd.ipynb
docs/source/notebooks/: computeRD-QVPs.ipynb  radchain_ukmo9.ipynb  radchain_ukmo90.ipynb  radchain_ukmoC.ipynb
docs/source/rnotes/: release_notes.rst
docs/source/userguide/: installation.rst
scripts/: radchain_ukmoRDQVP.py
towerpy/: __init__.py  xarray.py
towerpy/attc/: attc_zhzdr.py  r_att_refl.py
towerpy/calib/: __init__.py  calib_phidp.py  calib_polvars.py  calib_rhohv.py  calib_zdr.py
towerpy/datavis/: rad_display.py  rad_interactive.py  tpy_colors.py
towerpy/eclass/: nme.py  snr.py
towerpy/georad/: georef_rdata.py
towerpy/io/: __init__.py  empty.py  modeltp.py  ukmo.py
towerpy/ml/: mlyr.py
towerpy/profs/: polprofs.py
towerpy/qpe/: qpe_algs.py
towerpy/utils/: radutilities.py  unit_conversion.py
